istio/security-setup.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: devops-app
spec:
  mtls:
    mode: DISABLE
